--- a/Week 7/assign07.html
+++ b/Week 7/assign07.html
@@ -27,7 +27,7 @@
   <input type="text" id="payment" name="payment" value="" readonly>
   <br>
   <br>
-  <input type="reset" value="Clear Form" id="clear" onclick="onClear()"></button>
+  <input type="reset"  id="clear" onclick="onClear()">Clear Form</button>
   <button type="button" id="calculate" onclick="calculateFunction()">Click Me!</button>
   <br>
   <p id="error"></p>
